# games101

hw1/: note.md
hw1/src/: CMakeLists.txt  main.cpp  rasterizer.cpp
hw2/: note.md
hw2/src/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
hw3/: note.md
hw3/src/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
hw5/: note.md
hw5/code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
hw6/: note.md
hw6/src/: BVH.cpp  Renderer.cpp  Scene.hpp  Triangle.hpp
hw7/: note.md
hw7/resource/: binary_spp1.ppm  binary_spp16.ppm
hw7/src/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
